# MediaPlayer

./: .gitignore  CMakeLists.txt  main.cpp
docs/: player-architecture.md
model/: debuglogentry.h  debuglogmodel.cpp  debuglogmodel.h  logentry.cpp  logentry.h  logmodel.cpp  logmodel.h
service/adapter/: iaudioadapter.cpp  iaudioadapter.h  ivideoadapter.cpp  ivideoadapter.h  qaudiooutputadapter.cpp  qaudiooutputadapter.h  qimagevideoadapter.cpp  qimagevideoadapter.h  videorendereradapter.cpp  videorendereradapter.h
service/common/: frame.h  packet.h  timestampeditem.h
service/ffmpeg/: ffmpegdecoderworker.cpp  ffmpegdecoderworker.h  ffmpegframeconverter.cpp  ffmpegframeconverter.h  ffmpegmediadecoder.cpp  ffmpegmediadecoder.h  ffmpegutils.cpp  ffmpegutils.h
service/logging/: logservice.cpp  logservice.h
service/pipeline/: blockingqueue.h  ffmpegaudiodecoder.cpp  ffmpegaudiodecoder.h  ffmpegdemuxer.cpp  ffmpegdemuxer.h  ffmpegsubtitledecoder.cpp  ffmpegsubtitledecoder.h  ffmpegvideodecoder.cpp  ffmpegvideodecoder.h  framequeue.h  mediapipelineservice.cpp  mediapipelineservice.h  mediasourceinfo.h  mediatypes.h  packetqueue.h  pipelineworker.cpp  pipelineworker.h  workerconfig.h
service/pipeline/factory/: ffmpegcomponentfactory.cpp  ffmpegcomponentfactory.h  filemediasourcefactory.cpp  filemediasourcefactory.h  ibackendcomponentfactory.h  ibackendfactory.h  imediasourcefactory.h  mediabackendfactory.cpp  mediabackendfactory.h
service/pipeline/interface/: blockingframequeue.cpp  blockingframequeue.h  blockingpacketqueue.cpp  blockingpacketqueue.h  decoderinitdata.h  ffmpegaudioframetransformer.cpp  ffmpegaudioframetransformer.h  ffmpegmediademuxer.cpp  ffmpegmediademuxer.h  ffmpegvideodecodercomponent.cpp  ffmpegvideodecodercomponent.h  ffmpegvideoframetransformer.cpp  ffmpegvideoframetransformer.h  filemediasource.cpp  filemediasource.h  iaudiooutputadapter.h  iframequeue.h  iframetransformer.h  imediademuxer.h  imediapipeline.h  imediasource.h  ipacketqueue.h  ipipelineevents.h  isubtitlerenderadapter.h  ivideodecoder.h  ivideorenderadapter.h
service/player/: engineevent.h  iaudioframesource.h  imediaclock.h  iplaybackscheduler.h  masterclocktype.h  mediaclock.cpp  mediaclock.h  mediainfo.h  mediaplayerengine.cpp  mediaplayerengine.h  playbackframe.h  playbackstate.h  playstate.h  simpleplaybackscheduler.cpp  simpleplaybackscheduler.h
video/: synTest.py
view/: debugwidget.cpp  debugwidget.h  debugwidget.ui  logwidget.cpp  logwidget.h  logwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playbackcontrolwidget.cpp  playbackcontrolwidget.h  playbackcontrolwidget.ui  videowidget.cpp  videowidget.h  videowidget.ui
viewmodel/: mainwindowviewmodel.cpp  mainwindowviewmodel.h
